# Solenoid-driver

./: CMakeLists.txt  readme.txt
inc/: lwipopts.h  main.h  packetizer.h  ptpsync.h
src/: main.c  netconf.c  packetizer.c  ptpsync.c
